--- a/docs/community/local-groups.mdx
+++ b/docs/community/local-groups.mdx
@@ -80,6 +80,12 @@ us on [Discord](https://discord.com/invite/ktMAKGBnBs) to add your group.
 ## Lithuania
 - [Meshtastic Lietuva](https://www.facebook.com/groups/1122509422249414)
 
+## Netherlands, The
+- [MeshNet](https://www.meshnet.nl)
+- [Meshtastic NL Facebook](https://www.facebook.com/groups/1016623089438844)
+- [Meshtastic Netherlands Telegram](https://t.me/meshtastic_nl)
+
+
 ## Poland
 - [Meshtastic Poland Matrix Space](https://matrix.to/#/#meshtasticpl:matrix.org)
 
